--- a/package.json
+++ b/package.json
@@ -7,7 +7,10 @@
     "@testing-library/react": "^13.3.0",
     "@testing-library/user-event": "^13.5.0",
     "bootstrap": "4.6.0",
+    "ethers": "^5.6.9",
     "jquery": "^3.6.0",
+    "keccak256": "^1.0.6",
+    "merkletreejs": "^0.2.32",
     "node-sass": "^7.0.1",
     "react": "^18.2.0",
     "react-accessible-accordion": "^5.0.0",
@@ -17,6 +20,7 @@
     "react-player": "^2.10.1",
     "react-router-dom": "^6.3.0",
     "react-scripts": "5.0.1",
+    "react-toastify": "^9.0.7",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
